[project]
name = "ausflug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "pandas>=2.3.1",
    "streamlit>=1.47.0",
    "streamlit-folium>=0.25.0",
    "tabulate>=0.9.0",
]


[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
extend-select = ["E", "F", "I", "W"]
extend-ignore = ["D","CPY"]
